# Adafruit_TinyUSB_ArduinoCore

./: Adafruit_TinyUSB_Core.h  Adafruit_USBD_CDC.cpp  Adafruit_USBD_CDC.h  Adafruit_USBD_Device.cpp  Adafruit_USBD_Device.h  CMakeLists.txt  Makefile
include/: Adafruit_TinyUSB_Core.h  Adafruit_USBD_CDC.h  Adafruit_USBD_Device.h
